--- a/index.html
+++ b/index.html
@@ -1,18 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My First Web Page</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Bootstrap 5 Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Bootstrap JavaScript (for components like alerts, modals, etc.) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 <body>
-  <h1>Hello, GitHub!</h1>
-  <p>This is my first web page using version control with Git and GitHub. I forked a repository to create this. A fork
-    in Git is a personal copy of another user's repository that allows you to make changes without affecting the
-    original project.</p>
-</body>
 
+  <!-- Full-width banner (container-fluid stretches across the page) -->
+  <div class="container-fluid p-5 bg-primary text-white text-center">
+    <h1>My First Bootstrap Page</h1>
+    <p>Resize this responsive page to see the effect!</p> 
+  </div>
+
+  <!-- Main container (content stays centered and has margins) -->
+  <div class="container mt-5">
+
+    <!-- Heading and paragraph -->
+    <h2>Simple Container</h2>
+    <p>This is a paragraph inside a Bootstrap container.</p>
+
+    <!-- Button example -->
+    <button class="btn btn-primary">Click Me</button>
+
+    <!-- Alert example -->
+    <div class="alert alert-info mt-3" role="alert">
+      This is a simple Bootstrap alert.
+    </div>
+
+    <!-- List group example -->
+    <ul class="list-group mt-3">
+      <li class="list-group-item">Item 1</li>
+      <li class="list-group-item">Item 2</li>
+      <li class="list-group-item">Item 3</li>
+    </ul>
+
+  </div>
+  <!-- End of main container -->
+
+</body>
 </html>
+
