--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
     <h2>Simple Container</h2>
     <p>This is a paragraph inside a Bootstrap container.</p>
 
-    <!-- Button example -->
-    <button class="btn btn-primary">Click Me</button>
+    <!-- Clickable link styled as a button -->
+    <a href="https://www.msudenver.edu/" class="btn btn-primary" target="_blank">
+      Visit MSU Denver
+    </a>
 
     <!-- Alert example -->
     <div class="alert alert-info mt-3" role="alert">
@@ -46,4 +48,3 @@
 
 </body>
 </html>
-
