--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 
 <body>
 
-  <!-- Full-width banner (container-fluid stretches across the page) -->
-  <div class="container-fluid p-5 bg-danger text-white text-center">
-    <h1>My First Bootstrap Page</h1>
-    <p>Resize this responsive page to see the effect!</p>
-  </div>
+  <div class="container-fluid py-2 bg-danger text-white text-center">
+  <h1 class="fs-3">My First Bootstrap Page</h1>
+  <p class="mb-0">Erik Porter</p>
+</div>
 
   <!-- Main container (content stays centered and has margins) -->
   <div class="container mt-5">
@@ -32,33 +31,35 @@
 
     <p></p>
     <div class="text-center mt-4">
-  <!-- Centered text above the image -->
-  <h2>Dog</h2>
+      <!-- Centered text above the image -->
+      <h2>Dog</h2>
+    </div>
+    <h1>
+      </h2>
+      <img class="mx-auto d-block" src="images/Dog.jpg" alt="Dog Pic" width="320">
   </div>
-  <h1>
-    </h2>
-    <img class="mx-auto d-block" src="images/Dog.jpg" alt="Dog Pic" width="320">
-    </div>
 
-    <!-- Clickable link styled as a button -->
-    <a href="https://www.msudenver.edu/" class="btn btn-danger" target="_blank">
-      Visit MSU Denver
-    </a>
+  <!-- Clickable link styled as a button -->
+  <a href="https://www.msudenver.edu/" class="btn btn-danger d-block mx-auto mt-4" target="_blank">
+    Visit MSU Denver
+  </a>
 
-    <!-- Alert example -->
-    <div class="alert alert-info mt-3" role="alert">
-      This is a simple Bootstrap alert.
-    </div>
+  <!-- Alert example -->
+  <div class="alert alert-info mt-3 text-center" role="alert">
+    This is a simple Bootstrap alert.
+  </div>
 
-    <!-- List group example -->
-    <ul class="list-group mt-3" data-bs-theme="dark">
-      <li class="list-group-item">Item 1</li>
-      <li class="list-group-item">Item 2</li>
-      <li class="list-group-item">Item 3</li>
-    </ul>
 
-    </div>
-    <!-- End of main container -->
+  <!-- List group example -->
+  <ul class="list-group list-group-horizontal justify-content-center mt-3">
+    <li class="list-group-item flex-fill text-center">Item 1</li>
+    <li class="list-group-item flex-fill text-center">Item 2</li>
+    <li class="list-group-item flex-fill text-center">Item 3</li>
+  </ul>
+
+  <div class="mb-5"></div>
+  </div>
+  <!-- End of main container -->
 
 </body>
 
