--- a/index.html
+++ b/index.html
@@ -14,11 +14,44 @@
 </head>
 
 <body>
+  <!-- Start of the Bootstrap navigation bar -->
+  <nav class="navbar navbar-expand-lg bg-dark" role="navigation" aria-label="Main navigation">
+    <div class="container-fluid">
 
-  <div class="container-fluid py-2 bg-danger text-white text-center">
-  <h1 class="fs-3">My First Bootstrap Page</h1>
-  <p class="mb-0">Erik Porter</p>
-</div>
+      <!-- Website or brand name (usually links back to the home page) -->
+      <a class="navbar-brand" href="#">Navbar</a>
+
+      <!-- Button that shows up on smaller screens (the "hamburger" menu) -->
+      <!-- data-bs-toggle="collapse" and data-bs-target="#navbarNavAltMarkup"
+             connect this button to the collapsible menu below -->
+      <!-- aria-controls="navbarNavAltMarkup" tells screen readers what it controls -->
+      <!-- aria-expanded="false" changes to true when the menu is open -->
+      <!-- aria-label gives a clear name so screen readers announce "Toggle navigation" -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <!-- The icon inside the button (the 3-line "hamburger") -->
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible navigation area (hidden on small screens until toggled) -->
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+
+        <!-- Navigation links -->
+        <!-- aria-current="page" tells screen readers that "Home" is the active page -->
+        <div class="navbar-nav">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link" href="about.html">About</a>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div id="nav-placeholder"></div>
+
+
+  <div class="container-fluid py-2 bg-danger text-black text-center">
+    <h1 class="fs-3">My First Bootstrap Page</h1>
+    <p class="mb-0">Erik Porter</p>
+  </div>
 
   <!-- Main container (content stays centered and has margins) -->
   <div class="container mt-5">
@@ -60,6 +93,12 @@
   <div class="mb-5"></div>
   </div>
   <!-- End of main container -->
+
+  <script>
+    $("#nav-placeholder").load("navbar.html");
+  </script>
+  <!-- Bootstrap JS must go last -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 
