--- a/otherproject.html
+++ b/otherproject.html
@@ -41,8 +41,6 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="about.html">About</a>
-          <a class="nav-link" href="technicalproject.html">About</a>
-          <a class="nav-link" href="otherproject.html">About</a>
         </div>
       </div>
     </div>
@@ -51,7 +49,7 @@
 
 
   <div class="container-fluid py-2 bg-danger text-black text-center">
-    <h1 class="fs-3">My First Bootstrap Page</h1>
+    <h1 class="fs-3">Other Projects</h1>
     <p class="mb-0">Erik Porter</p>
   </div>
 
