Addes second image "leadville"

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="about.html">About</a>
-          <a class="nav-link" href="technicalproject.html">About</a>
-          <a class="nav-link" href="otherproject.html">About</a>
+          <a class="nav-link" href="technicalproject.html">Technical Project</a>
+          <a class="nav-link" href="otherproject.html">Other Projects</a>
         </div>
       </div>
     </div>
@@ -69,30 +69,33 @@
       <!-- Centered text above the image -->
       <h2>Dog</h2>
     </div>
-    <h1>
-      </h2>
-      <img class="mx-auto d-block" src="images/Dog.jpg" alt="Dog Pic" width="320">
-  </div>
+    <img class="mx-auto d-block mb-4" src="images/Dog.jpg" alt="Dog Pic" width="320">
 
-  <!-- Clickable link styled as a button -->
-  <a href="https://www.msudenver.edu/" class="btn btn-danger d-block mx-auto mt-4" target="_blank">
-    Visit MSU Denver
-  </a>
+    <div class="text-center mt-4">
+      <!-- Second image -->
+      <h2>Leadville</h2>
+    </div>
+    <img class="mx-auto d-block" src="images/Leadville.jpg" alt="Leadville Pic" width="320">
 
-  <!-- Alert example -->
-  <div class="alert alert-info mt-3 text-center" role="alert">
-    This is a simple Bootstrap alert.
-  </div>
+    <!-- Clickable link styled as a button -->
+    <a href="https://www.msudenver.edu/" class="btn btn-danger d-block mx-auto mt-4" target="_blank">
+      Visit MSU Denver
+    </a>
+
+    <!-- Alert example -->
+    <div class="alert alert-info mt-3 text-center" role="alert">
+      This is a simple Bootstrap alert.
+    </div>
 
 
-  <!-- List group example -->
-  <ul class="list-group list-group-horizontal justify-content-center mt-3">
-    <li class="list-group-item flex-fill text-center">Item 1</li>
-    <li class="list-group-item flex-fill text-center">Item 2</li>
-    <li class="list-group-item flex-fill text-center">Item 3</li>
-  </ul>
+    <!-- List group example -->
+    <ul class="list-group list-group-horizontal justify-content-center mt-3">
+      <li class="list-group-item flex-fill text-center">Item 1</li>
+      <li class="list-group-item flex-fill text-center">Item 2</li>
+      <li class="list-group-item flex-fill text-center">Item 3</li>
+    </ul>
 
-  <div class="mb-5"></div>
+    <div class="mb-5"></div>
   </div>
   <!-- End of main container -->
 
