--- a/otherproject.html
+++ b/otherproject.html
@@ -41,6 +41,8 @@
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="technicalproject.html">Technical Project</a>
+          <a class="nav-link" href="otherproject.html">Other Projects</a>
         </div>
       </div>
     </div>
