--- a/technicalproject.html
+++ b/technicalproject.html
@@ -40,7 +40,9 @@
         <!-- aria-current="page" tells screen readers that "Home" is the active page -->
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="technicalproject.html">Technical Project</a>
+          <a class="nav-link" href="otherproject.html">Other Projects</a>
         </div>
       </div>
     </div>
