changing image names to fix images on pages

--- a/index.html
+++ b/index.html
@@ -60,22 +60,20 @@
 
     <!-- Heading and paragraph -->
     <h2>Simple Container</h2>
-    <p>This is a paragraph inside a Bootstrap container. This is a paragraph inside a Bootstrap container.This is a
-      paragraph inside a Bootstrap container.This is a paragraph inside a Bootstrap container.This is a paragraph inside
-      a Bootstrap container.</p>
+    <p>Testing testing testing</p>
 
     <p></p>
     <div class="text-center mt-4">
       <!-- Centered text above the image -->
       <h2>Dog</h2>
     </div>
-    <img class="mx-auto d-block mb-4" src="images/Dog.jpg" alt="Dog Pic" width="320">
+    <img class="mx-auto d-block mb-4" src="images/dog.jpg" alt="dog Pic" width="320">
 
     <div class="text-center mt-4">
       <!-- Second image -->
       <h2>Leadville</h2>
     </div>
-    <img class="mx-auto d-block" src="images/Leadville.jpg" alt="Leadville Pic" width="320">
+    <img class="mx-auto d-block" src="images/leadville.jpg" alt="leadville Pic" width="320">
 
     <!-- Clickable link styled as a button -->
     <a href="https://www.msudenver.edu/" class="btn btn-danger d-block mx-auto mt-4" target="_blank">
