--- a/about.html
+++ b/about.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en">
+
 
 <head>
   <title>Bootstrap 5 Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Bootstrap JavaScript (for components like alerts, modals, etc.) -->
+
+  <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-<body>
-  <!-- Start of the Bootstrap navigation bar -->
-  <nav class="navbar navbar-expand-lg bg-dark" role="navigation" aria-label="Main navigation">
-    <div class="container-fluid">
 
-      <!-- Website or brand name (usually links back to the home page) -->
+<body>
+  <!-- Navbar with light gray background -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light" role="navigation" aria-label="Main navigation">
+    <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
 
-      <!-- Button that shows up on smaller screens (the "hamburger" menu) -->
-      <!-- data-bs-toggle="collapse" and data-bs-target="#navbarNavAltMarkup"
-             connect this button to the collapsible menu below -->
-      <!-- aria-controls="navbarNavAltMarkup" tells screen readers what it controls -->
-      <!-- aria-expanded="false" changes to true when the menu is open -->
-      <!-- aria-label gives a clear name so screen readers announce "Toggle navigation" -->
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <!-- The icon inside the button (the 3-line "hamburger") -->
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <!-- Collapsible navigation area (hidden on small screens until toggled) -->
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
-        <!-- Navigation links -->
-        <!-- aria-current="page" tells screen readers that "Home" is the active page -->
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           <a class="nav-link active" aria-current="page" href="index.html">Home</a>
           <a class="nav-link" href="about.html">About</a>
+          <a class="nav-link" href="technicalproject.html">Technical Project</a>
+          <a class="nav-link" href="otherproject.html">Other Projects</a>
         </div>
       </div>
     </div>
@@ -48,58 +43,60 @@
   <div id="nav-placeholder"></div>
 
 
-  <div class="container-fluid py-2 bg-danger text-black text-center">
-    <h1 class="fs-3">My About page</h1>
+  <!-- Soft light blue header -->
+  <div class="container-fluid py-2 bg-info text-dark text-center">
+    <h1 class="fs-3">About page</h1>
     <p class="mb-0">Erik Porter</p>
   </div>
 
-  <!-- Main container (content stays centered and has margins) -->
+
+  <!-- Main container -->
   <div class="container mt-5">
-
-    <!-- Heading and paragraph -->
     <h2>Simple Container</h2>
-    <p>This is a paragraph inside a Bootstrap container. This is a paragraph inside a Bootstrap container.This is a
-      paragraph inside a Bootstrap container.This is a paragraph inside a Bootstrap container.This is a paragraph inside
-      a Bootstrap container.</p>
+    <p>Testing testing testing</p>
 
-    <p></p>
+
     <div class="text-center mt-4">
-      <!-- Centered text above the image -->
       <h2>Dog</h2>
     </div>
-    <h1>
-      </h2>
-      <img class="mx-auto d-block" src="images/Dog.jpg" alt="Dog Pic" width="320">
+    <img class="mx-auto d-block mb-4" src="images/dog.jpg" alt="dog Pic" width="320">
+
+
+    <div class="text-center mt-4">
+      <h2>Leadville</h2>
+    </div>
+    <img class="mx-auto d-block" src="images/leadville.jpg" alt="leadville Pic" width="320">
+
+
+    <!-- Neutral gray button -->
+    <a href="https://www.msudenver.edu/" class="btn btn-secondary d-block mx-auto mt-4" target="_blank">
+      Visit MSU Denver
+    </a>
+
+
+    <!-- Soft alert (light blue) -->
+    <div class="alert alert-info mt-3 text-center" role="alert">
+      This is a simple Bootstrap alert.
+    </div>
+
+
+    <!-- List group -->
+    <ul class="list-group list-group-horizontal justify-content-center mt-3">
+      <li class="list-group-item flex-fill text-center">Item 1</li>
+      <li class="list-group-item flex-fill text-center">Item 2</li>
+      <li class="list-group-item flex-fill text-center">Item 3</li>
+    </ul>
+
+
+    <div class="mb-5"></div>
   </div>
 
-  <!-- Clickable link styled as a button -->
-  <a href="https://www.msudenver.edu/" class="btn btn-danger d-block mx-auto mt-4" target="_blank">
-    Visit MSU Denver
-  </a>
-
-  <!-- Alert example -->
-  <div class="alert alert-info mt-3 text-center" role="alert">
-    This is a simple Bootstrap alert.
-  </div>
-
-
-  <!-- List group example -->
-  <ul class="list-group list-group-horizontal justify-content-center mt-3">
-    <li class="list-group-item flex-fill text-center">Item 1</li>
-    <li class="list-group-item flex-fill text-center">Item 2</li>
-    <li class="list-group-item flex-fill text-center">Item 3</li>
-  </ul>
-
-  <div class="mb-5"></div>
-  </div>
-  <!-- End of main container -->
 
   <script>
     $("#nav-placeholder").load("navbar.html");
   </script>
-  <!-- Bootstrap JS must go last -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
+
 
 </html>
