--- a/index.html
+++ b/index.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
   <title>Bootstrap 5 Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-
 
   <!-- Bootstrap JavaScript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-
 
 <body>
   <!-- Navbar with light gray background -->
@@ -23,12 +19,10 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Navbar</a>
 
-
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-
 
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
@@ -42,61 +36,64 @@
   </nav>
   <div id="nav-placeholder"></div>
 
-
   <!-- Soft light blue header -->
   <div class="container-fluid py-2 bg-info text-dark text-center">
     <h1 class="fs-3">Weclome to my page</h1>
     <p class="mb-0">Erik Porter</p>
   </div>
 
+  <!-- List group (moved up here) -->
+  <ul class="list-group list-group-horizontal justify-content-center mt-3">
+    <li class="list-group-item flex-fill text-center">
+      <strong>About Me</strong><br>
+      Learn more about who I am, my background, and my interests.
+    </li>
+    <li class="list-group-item flex-fill text-center">
+      <strong>Technical Project</strong><br>
+      Explore details about my main technical project, including tools and results.
+    </li>
+    <li class="list-group-item flex-fill text-center">
+      <strong>Other Projects</strong><br>
+      A collection of smaller projects and experiments I’ve worked on.
+    </li>
+  </ul>
 
   <!-- Main container -->
   <div class="container mt-5">
     <h2>Simple Container</h2>
     <p>Testing testing testing</p>
 
-
     <div class="text-center mt-4">
       <h2>Dog</h2>
     </div>
     <img class="mx-auto d-block mb-4" src="images/dog.jpg" alt="dog Pic" width="320">
-
 
     <div class="text-center mt-4">
       <h2>Leadville</h2>
     </div>
     <img class="mx-auto d-block" src="images/leadville.jpg" alt="leadville Pic" width="320">
 
-
     <!-- Neutral gray button -->
     <a href="https://www.msudenver.edu/" class="btn btn-secondary d-block mx-auto mt-4" target="_blank">
       Visit MSU Denver
     </a>
-
 
     <!-- Soft alert (light blue) -->
     <div class="alert alert-info mt-3 text-center" role="alert">
       This is a simple Bootstrap alert.
     </div>
 
-
-    <!-- List group -->
-    <ul class="list-group list-group-horizontal justify-content-center mt-3">
-      <li class="list-group-item flex-fill text-center">Item 1</li>
-      <li class="list-group-item flex-fill text-center">Item 2</li>
-      <li class="list-group-item flex-fill text-center">Item 3</li>
-    </ul>
-
-
     <div class="mb-5"></div>
   </div>
 
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <script>
     $("#nav-placeholder").load("navbar.html");
   </script>
+
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-
 </html>
