More fixes and cleanup

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
       </div>
     </div>
   </nav>
-  <div id="nav-placeholder"></div>
 
   <!-- Soft light blue header -->
   <div class="container-fluid py-2 bg-info text-dark text-center">
@@ -42,7 +41,7 @@
     <p class="mb-0">Erik Porter</p>
   </div>
 
-  <!-- List group (moved up here) -->
+  <!-- List group (right under header) -->
   <ul class="list-group list-group-horizontal justify-content-center mt-3">
     <li class="list-group-item flex-fill text-center">
       <strong>About Me</strong><br>
@@ -59,7 +58,7 @@
   </ul>
 
   <!-- Main container -->
-  <div class="container mt-5">
+  <div class="container mt-5 text-center">
     <h2>Simple Container</h2>
     <p>Testing testing testing</p>
 
@@ -85,15 +84,5 @@
 
     <div class="mb-5"></div>
   </div>
-
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <script>
-    $("#nav-placeholder").load("navbar.html");
-  </script>
-
-  <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
